# gh-workflow

./: .gitignore  .mcp.json  Cargo.toml  README.md  deriveclone.py  generate.js  generate.ts  package-lock.json  package.json  renovate.json  setup.sh
.github/: release-drafter.yml
.github/workflows/: autofix.yml  ci.yml  release-drafter.yml  release.yml
crates/gh-workflow/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-macros/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-tailcall/: CHANGELOG.md  Cargo.toml
crates/gh-workflow-tailcall/src/: lib.rs  release.rs  standard.rs  workflow.rs
crates/gh-workflow-tailcall/tests/: ci.rs
crates/gh-workflow/src/: cargo.rs  container.rs  ctx.rs  env.rs  error.rs  event.rs  generate.rs  job.rs  lib.rs  release_plz.rs  rust_flag.rs  secrets.rs  step.rs  toolchain.rs  workflow.rs
crates/gh-workflow/src/snapshots/: gh_workflow__cargo__tests__cargo.snap
crates/gh-workflow/tests/: test-workflow.rs
crates/gh-workflow/tests/fixtures/: workflow-secrets.yml
macros/src/: lib.rs
src/: auto_commit.rs  expr.rs  generate.rs  lib.rs  workflow.rs
tests/: ci.rs
workspace/autogen/: Cargo.toml  build.rs
workspace/autogen/src/: main.rs
workspace/gh-rust-toolchain/src/: toolchain.rs
workspace/gh-workflow/: CHANGELOG.md  Cargo.toml
workspace/gh-workflow-gen/: Cargo.toml  build.rs
workspace/gh-workflow-gen/src/: main.rs
workspace/gh-workflow-release-plz/: CHANGELOG.md
workspace/gh-workflow-rs/: Cargo.toml  build.rs
workspace/gh-workflow-rs/src/: model.rs  worker.rs  workflow.rs
workspace/gh-workflow-rs/src/fixtures/: workflow-bench.yml  workflow-ci.yml  workflow-demo.yml  workflow-rust.yml
workspace/gh-workflow-rs/src/snapshots/: gh_workflow_rs__worker__tests__worker_generate.snap
workspace/gh-workflow/src/: cargo.rs  error.rs  event.rs  generate.rs  lib.rs  rust_flag.rs  serde.rs  toolchain.rs  validate.rs  version.rs  workflow.rs
workspace/gh-workflow/tests/: test-workflow.rs
workspace/gh-workflow/tests/fixtures/: workflow-bench.yml  workflow-ci.yml
