[package]
name = "gh-workflow-tailcall"
version = "0.5.6"
edition = "2021"


description = "macros for gh-workflow"
license = "Apache-2.0"
documentation = "https://docs.rs/gh-workflow"
homepage = "https://github.com/tailcallhq/gh-workflow"
repository = "https://github.com/tailcallhq/gh-workflow"
keywords = ["github", "actions", "workflow", "generator"]

[dependencies]
derive_setters = { version = "0.1.8" }
gh-workflow = { path = "../gh-workflow", version = "0.8.0" }
heck = "0.5.0"

[dev-dependencies]
insta = "1.43.2"
pretty_assertions = "1.4.1"


[lints]
workspace = true
