[package]
name = "gh-workflow-tailcall"
version = "0.5.7"
edition = "2021"


description = "macros for gh-workflow"
license = "Apache-2.0"
documentation = "https://docs.rs/gh-workflow"
homepage = "https://github.com/tailcallhq/gh-workflow"
repository = "https://github.com/tailcallhq/gh-workflow"
keywords = ["github", "actions", "workflow", "generator"]

[dependencies]
derive_setters = { workspace = true }
gh-workflow = { path = "../gh-workflow", version = "0.8.1" }
heck = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }


[lints]
workspace = true
