[package]
name = "gh-workflow"
version = "0.8.0"
edition = "2021"

description = "A type-safe GitHub Actions workflow generator"
license = "Apache-2.0"
documentation = "https://docs.rs/gh-workflow"
homepage = "https://github.com/tailcallhq/gh-workflow"
repository = "https://github.com/tailcallhq/gh-workflow"
keywords = ["github", "actions", "workflow", "generator"]
readme = "../../README.md"

[dependencies]
async-trait = "0.1.89"
derive_more = { version = "2.0.1", features = ["from", "deref", "deref_mut"] }
derive_setters = "0.1.8"
indexmap = { version = "2.12.0", features = ["serde"] }
merge = "0.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
serde_yaml = "0.9.34"
strum_macros = "0.27.2"
gh-workflow-macros = { path = "../gh-workflow-macros", version = "0.8.0" }

[dev-dependencies]
insta = "1.43.2"
pretty_assertions = "1.4.1"


[lints]
workspace = true
