[package]
name = "gh-workflow"
version = "0.8.0"
edition = "2021"

description = "A type-safe GitHub Actions workflow generator"
license = "Apache-2.0"
documentation = "https://docs.rs/gh-workflow"
homepage = "https://github.com/tailcallhq/gh-workflow"
repository = "https://github.com/tailcallhq/gh-workflow"
keywords = ["github", "actions", "workflow", "generator"]
readme = "../../README.md"

[dependencies]
async-trait = { workspace = true }
derive_more = { workspace = true }
derive_setters = { workspace = true }
indexmap = { workspace = true }
merge = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
strum_macros = { workspace = true }
gh-workflow-macros = { path = "../gh-workflow-macros", version = "0.8.0" }

[dev-dependencies]
insta = { workspace = true }
pretty_assertions = { workspace = true }


[lints]
workspace = true
